version/0.28/_sources/api/solver/_autosummary/settings/mrf_omega.rst.txt
:orphan:

.. _mrf_omega:

mrf_omega
=========

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.mrf_omega
    :show-inheritance:

.. rubric:: Attributes

==================================   =======================================================

Attribute                                                                            Summary

==================================   =======================================================
:ref:`option <option_31>`                Specify how the boundary condition will be defined.

:ref:`value <value_17>`                             Specify value as constant or expression.

:ref:`profile_name <profile_name>`                          Specify the name of the profile.

:ref:`field_name <field_name>`                                Specify the name of the field.

:ref:`udf <udf>`                              Specify the name of the user-defined function.

==================================   =======================================================

.. rubric:: Included in:

============================================   =================================================================

Parent                                                                                                   Summary

============================================   =================================================================
:ref:`reference_frame_2 <reference_frame_2>`                             Reference frame settings for this zone.

:ref:`reference_frame_3 <reference_frame_3>`       Allows to change reference-frame model variables or settings.

============================================   =================================================================

